# dynamic_server

./: CMakeLists.txt  Readme.md  docker-compose.yaml
route_base/: route_base.h
routes/test/: CMakeLists.txt  test.c
server/: CMakeLists.txt  server.c
